Updated by task 'AutomatedMDTask_1659553366674_TM-MT_1659553455825'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/6a209c39df241f08ede68adc44f95ab52219cdd1

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
 exl-id: e34751dc-3a83-4b34-b5f4-0379abaaf177
-source-git-commit: 7cb940019905240b36e96b834b9e5d0166c1324d
+source-git-commit: 72ca4f0c22d5e37ffa079940ed20e219445a0bf1
 workflow-type: tm+mt
-source-wordcount: '2115'
-ht-degree: 4%
+source-wordcount: '2348'
+ht-degree: 5%
 
 ---
 
@@ -15,15 +15,18 @@ ht-degree: 4%
 
 Atualizações dos recursos existentes na Adobe Experience Platform:
 
-- [Painéis](#dashboards)
-- [Coleta de dados](#collection)
-- [[!DNL Data Prep]](#data-prep)
-- [[!DNL Destinations]](#destinations)
-- [Experience Data Model (XDM)](#xdm)
-
-<!-- - [Real-time Customer Data Platform B2B Edition](#b2b) -->
-- [Perfil do cliente em tempo real](#profile)
-- [Fontes](#sources)
+- [Notas de versão da Adobe Experience Platform](#adobe-experience-platform-release-notes)
+   - [Painéis {#dashboards}](#dashboards-dashboards)
+      - [Painéis de perfis de conta](#account-profiles-dashboards)
+      - [Painéis de perfil](#profile-dashboards)
+      - [Painéis de destinos](#destinations-dashboards)
+   - [Coleta de dados {#collection}](#data-collection-collection)
+   - [[!DNL Data Prep] {#data-prep}](#dnl-data-prep-data-prep)
+   - [[!DNL Destinations] {#destinations}](#dnl-destinations-destinations)
+   - [Experience Data Model (XDM) {#xdm}](#experience-data-model-xdm-xdm)
+   - [Real-time Customer Data Platform Edição B2B {#b2b}](#real-time-customer-data-platform-b2b-edition-b2b)
+   - [Perfil do cliente em tempo real {#profile}](#real-time-customer-profile-profile)
+   - [Fontes {#sources}](#sources-sources)
 
 ## Painéis {#dashboards}
 
@@ -170,16 +173,23 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 
 Para obter mais informações sobre o XDM na Platform, consulte o [Visão geral do sistema XDM](../../xdm/home.md).
 
-<!-- ## Real-time Customer Data Platform B2B Edition {#b2b}
+## Real-time Customer Data Platform Edição B2B {#b2b}
 
-Built on Real-time Customer Data Platform (Real-time CDP), Real-time CDP B2B Edition is purpose-built for marketers operating in a business-to-business service model. It brings together data from multiple sources and combines it into a single view of people and account profiles. This unified data allows marketers to precisely target specific audiences and engage those audiences across all available channels.
+Baseada na Real-time Customer Data Platform (CDP em tempo real), a CDP B2B Edition em tempo real é projetada especificamente para profissionais de marketing que operam em um modelo de serviço de negócios para empresas. Ele reúne dados de várias fontes e os combina em uma única visualização de pessoas e perfis de conta. Esses dados unificados permitem que os profissionais de marketing direcionem com precisão públicos-alvo específicos e os envolvam em todos os canais disponíveis.
 
-| Feature | Description |
-| Lead to account matching | Lead to account matching allows you to use Real-time CDP B2B edition to match known person profiles to account profiles so that these profiles can be segmented and targeted with B2B context data like account, opportunity (and add something else like don't use etc. to the description). For more information, see the document on [lead to account matching](../../rtcdp/b2b-ai-ml-services/lead-to-account-matching.md). For a guide on how to monitor profile enrichment, see the document on [monitoring profile enrichment in the UI](../../dataflows/ui/b2b/monitor-profile-enrichment.md). For instructions on how to use related accounts in segment definitions, see the guide on [Segmentation use cases for Real-time Customer Data Platform B2B Edition](../../rtcdp/segmentation/b2b.md#related-accounts)."|
+**Novos recursos**
 
-{style="table-layout:auto"}
+| Recurso | Descrição |
+| --- | --- |
+| Lead para correspondência da conta | A correspondência cliente a destinatário permite que você participe de perfis de pessoa conhecidos para perfis de conta. Você pode segmentar e direcionar dados em um contexto B2B, como contas ou oportunidades. Os trabalhos executados diariamente usam fatores determinísticos e probabilísticos para corresponder perfis de pessoas que ainda não estão associados a nenhuma conta a uma conta correspondente. Você pode decidir incluir essas correspondências nas definições de segmento |
 
-To learn more about Real-time CDP B2B Edition, see the [Real-time CDP B2B overview](../../rtcdp/overview.md). -->
+Para obter mais informações, consulte o documento em [levar à correspondência da conta](../../rtcdp/b2b-ai-ml-services/lead-to-account-matching.md).
+
+Para obter um guia sobre como monitorar o enriquecimento do perfil, consulte o documento em [monitorar o enriquecimento do perfil na interface do usuário](../../dataflows/ui/b2b/monitor-profile-enrichment.md).
+
+Para obter instruções sobre como usar contas relacionadas em definições de segmentos, consulte o guia sobre [Casos de uso de segmentação para Real-time Customer Data Platform B2B Edition](../../rtcdp/segmentation/b2b.md#related-accounts).
+
+Para saber mais sobre a Real-time CDP B2B Edition, consulte o [Visão geral da CDP B2B em tempo real](../../rtcdp/overview.md).
 
 ## Perfil do cliente em tempo real {#profile}
 
