Updated by task 'AutomatedMDTask_1660155850257_TM-MT_1660155947989'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/29f5e1b80c45cba184d9e3047b1a6e7037e9a6f7

--- a/help/release-notes/2022/june-2022.md
+++ b/help/release-notes/2022/june-2022.md
@@ -2,7 +2,7 @@
 title: Notas de versão da Adobe Experience Platform de junho de 2022
 description: As notas de versão de junho de 2022 para o Adobe Experience Platform.
 exl-id: 44f5ca11-f5c0-4e86-98b2-9564e3a5ca3d
-source-git-commit: 4addf64a819cd302b514334ce9cd949e96d0e698
+source-git-commit: 525e2520bb6140b00cfb7e68579eb2d0288ad9b1
 workflow-type: tm+mt
 source-wordcount: '1865'
 ht-degree: 5%
@@ -91,14 +91,14 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 | Classe | [[!UICONTROL Plano]](https://github.com/adobe/xdm/blob/master/components/classes/plan.schema.json) | Uma classe de indústria de saúde que captura detalhes sobre um plano médico, como um plano de saúde ou plano de seguro. |
 | Classe | [[!UICONTROL Provedor]](https://github.com/adobe/xdm/blob/master/components/classes/provider.schema.json) | Uma classe do setor de saúde que captura detalhes sobre um provedor de saúde. |
 | Classe | [[!UICONTROL Pagador]](https://github.com/adobe/xdm/blob/master/components/classes/payer.schema.json) | Uma classe do setor de saúde que captura detalhes sobre uma seguradora. |
-| Classe | [[!UICONTROL Programação de Evento ao Vivo]](https://github.com/adobe/xdm/blob/master/components/classes/live-event-schedule.json) | Uma classe do setor de esportes e entretenimento que captura detalhes sobre uma programação de eventos ao vivo, como uma programação de concertos itinerantes ou uma programação de uma equipe esportiva. |
-| Classe | [[!UICONTROL Localização ]](https://github.com/adobe/xdm/blob/master/components/classes/location.json) | Uma classe da indústria de esportes e entretenimento que captura a localização de um evento ao vivo, como uma sala de concertos ou arena esportiva. |
+| Classe | [[!UICONTROL Programação de Evento ao Vivo]](https://github.com/adobe/xdm/blob/master/components/classes/live-event-schedule.schema.json) | Uma classe do setor de esportes e entretenimento que captura detalhes sobre uma programação de eventos ao vivo, como uma programação de concertos itinerantes ou uma programação de uma equipe esportiva. |
+| Classe | [[!UICONTROL Localização ]](https://github.com/adobe/xdm/blob/master/components/classes/location.schema.json) | Uma classe da indústria de esportes e entretenimento que captura a localização de um evento ao vivo, como uma sala de concertos ou arena esportiva. |
 | Grupo de campos | [[!UICONTROL Medicamentos para a saúde]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/medication/healthcare-medication.schema.json) | Um grupo de campos para a variável [!UICONTROL Medicação] classe que captura detalhes sobre a medicação, como nome da marca, número do lote e quantidade. |
 | Grupo de campos | [[!UICONTROL Detalhes do Plano de Saúde]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/plan/healthcare-plan-details.schema.json) | Um grupo de campos para a variável [!UICONTROL Plano] classe que captura detalhes como rede, tipo e status ativo. |
 | Grupo de campos | [[!UICONTROL Provedor de saúde]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/provider/healthcare-provider-details.schema.json) | Um grupo de campos para a variável [!UICONTROL Provedor] classe que capta dados de um profissional de saúde individual ou de uma organização de cuidados de saúde licenciada para prestar serviços de diagnóstico e tratamento de saúde. |
 | Grupo de campos | [[!UICONTROL Detalhes do Membro da Saúde]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/provider/healthcare-provider-details.schema.json) | Um grupo de campos para a variável [!UICONTROL Perfil individual XDM] classe que captura detalhes de uma pessoa que tem ou receberá um serviço ou assistência, como informações de contato, médico de assistência primária e informações de plano. |
 | Grupo de campos | [[!UICONTROL Detalhes da Sitecool]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/industry-verticals/experienceevent-healthcare-sitetool.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] classe que captura informações coletadas por ferramentas, como chatbot, pesquisa e assim por diante. |
-| Grupo de campos | [[!UICONTROL Compra de Tíquete do Evento em Tempo Real]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/industry-verticals/experienceevent-live-event-ticket-purchase.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] classe que captura o histórico de compras de ingressos para um evento ao vivo, como um concerto ou um jogo esportivo. |
+| Grupo de campos | [[!UICONTROL Compra de Tíquete do Evento em Tempo Real]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/industry-verticals/experienceevent-live-event-ticket-purchase.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] classe que captura o histórico de compras de ingressos para um evento ao vivo, como um concerto ou um jogo esportivo. |
 | Grupo de campos | [[!UICONTROL Programação de eventos desportivos e de entretenimento]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/live-event-schedule/sports-entertainment-event-schedule.schema.json) | Um grupo de campos para a variável [!UICONTROL Programação de Evento ao Vivo] classe que captura mais detalhes sobre a programação, como o nome da atração, os horários de abertura de portas e muito mais. |
 | Grupo de campos | [[!UICONTROL Local de evento de entretenimento de esportes]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/location/sports-entertainment-event-venue.schema.json) | Um grupo de campos para a variável [!UICONTROL Localização] classe que captura mais detalhes sobre o local do evento, como capacidade de assentos e Áreas de Mercado Designadas (DMAs). |
 | Schema global | (Vários) | Novos esquemas globais estão disponíveis para métricas de destinos para insights RTCDP. Veja o seguinte [solicitação pull](https://github.com/adobe/xdm/pull/1560) para obter mais detalhes. |
