--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,9 +2,9 @@
 title: Notas de versão da Adobe Experience Platform de maio de 2022
 description: As notas de versão de maio de 2022 para o Adobe Experience Platform.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: 04cf9c366b0495d23979643bd9f9e2da46d6a2f2
+source-git-commit: 49ba5263c6dc8eccac2ffe339476cf316c68e486
 workflow-type: tm+mt
-source-wordcount: '2401'
+source-wordcount: '2397'
 ht-degree: 5%
 
 ---
@@ -60,7 +60,7 @@ O Experience Platform fornece um conjunto de recursos de higiene de dados que pe
 
 | Recurso | Descrição |
 | --- | --- |
-| Tempo de vida (TTL) para conjuntos de dados | [Programar TTLs](../../hygiene/ui/ttl.md) para conjuntos de dados da plataforma. |
+| Expirações do conjunto de dados | [Programar TTLs](../../hygiene/ui/dataset-expiration.md) para conjuntos de dados da plataforma. |
 
 {style=&quot;table-layout:auto&quot;}
 
