Updated by task 'AutomatedMDTask_1663799905851_TM-MT_1663800005582'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/699dfe3ae9f642fe4664464656029b299bcf966b

--- a/help/tags/release-notes/2018.md
+++ b/help/tags/release-notes/2018.md
@@ -1,10 +1,11 @@
 ---
 title: Notas de versão de 2018
-description: Notas de versão de 2018 para tags no Adobe Experience Platform.
-source-git-commit: 12c3f440319046491054b3ef3ec404798bb61f06
+description: Notas de versão de 2018 de tags na Adobe Experience Platform.
+exl-id: fcbfa3f9-51a4-4852-894e-29343df3eabe
+source-git-commit: 77313baabee10e21845fa79763c7ade4e479e080
 workflow-type: tm+mt
-source-wordcount: '2644'
-ht-degree: 73%
+source-wordcount: '2635'
+ht-degree: 96%
 
 ---
 
@@ -38,9 +39,9 @@ Agora é possível fazer uma cópia de uma regra na mesma propriedade. Antes que
 
 #### Extensão principal:
 
-* **Opção Persistir coorte** A opção para persistir uma coorte foi adicionada à condição Amostragem. Essa opção tem o efeito de manter um usuário dentro ou fora da coorte de amostra nas sessões. Por exemplo, se a caixa de seleção “persist cohort” estiver marcada e a condição retornar &quot;true&quot; na primeira vez em que for executada para um determinado visitante, ela retornará &quot;true&quot; em todas as execuções subsequentes da condição para o mesmo visitante. Da mesma forma, se a caixa de seleção “persist cohort” estiver marcada e a condição retornar &quot;false&quot; na primeira vez em que for executada para um determinado visitante, ela retornará &quot;false&quot; em todas as execuções subsequentes da condição para o mesmo visitante.
-* **Correção de erros** Correção de um problema em que uma regra que utiliza um evento Page Bottom e uma ação Custom Code em uma página em que as tags estavam sendo carregadas de forma síncrona, mas instaladas incorretamente (sem chamada para  `_satellite.pageBottom()`), limpava o conteúdo do site.
-* **Correção de erros** Correção de um problema em que a opção Inserir Viewport não funcionava se a biblioteca de tags fosse carregada de forma assíncrona e terminasse de ser carregada após o evento DOMContentLoaded do navegador ser disparado.
+* **Opção Persistir coorte** A opção para persistir uma coorte foi adicionada à condição Amostragem. Essa opção tem o efeito de manter um usuário dentro ou fora da coorte de amostra nas sessões. Por exemplo, se a caixa de seleção &quot;persist cohort&quot; estiver marcada e a condição retornar &quot;true&quot; na primeira vez em que for executada para um determinado visitante, ela retornará &quot;true&quot; em todas as execuções subsequentes da condição para o mesmo visitante. Da mesma forma, se a caixa de seleção &quot;persist cohort&quot; estiver marcada e a condição retornar false na primeira vez em que for executada para um determinado visitante, ela retornará false em todas as execuções subsequentes da condição para o mesmo visitante.
+* **Correção de erros** Correção de um problema em que uma regra que usava um evento de parte inferior da página e uma ação de código personalizado em uma página em que as tags eram carregadas de forma síncrona, mas instaladas incorretamente (sem chamada para `_satellite.pageBottom()`) limpava o conteúdo do site.
+* **Correção de erros** Correção de um problema em que eventos de Enters Viewport não funcionavam se a biblioteca de tags fosse carregada de forma assíncrona e terminasse o carregamento após o evento DOMContentLoaded do navegador ser disparado.
 
 ### Correções de erros
 
@@ -67,16 +68,16 @@ Agora é possível fazer uma cópia de uma regra na mesma propriedade. Antes que
 
 ### Recursos
 
-Tags foram móveis!
+Agora as tags são compatíveis com dispositivos móveis.
 
-Usada por milhares de clientes para o gerenciamento de tags na Web, o espaço de trabalho de tags agora pode ser usado para gerenciar SDKs móveis.
+Usado por milhares de clientes para o gerenciamento de tags na Web, agora o espaço de trabalho de tags pode ser usado para gerenciar SDKs móveis.
 
-A criação de uma propriedade móvel na interface do usuário da coleta de dados permite:
+A criação de uma propriedade de tag móvel permite:
 
 * Criar elementos de dados e regras sofisticadas que podem combinar ações em várias soluções.
 * Gerenciar extensões móveis:
    * As extensões de Mobile Core e Perfil são pré-instaladas em todas as propriedades móveis.
-   * As extensões estão disponíveis para outras soluções Adobe, incluindo [!DNL Adobe Analytics], [!DNL Adobe Target] e [!DNL Adobe Audience Manager].
+   * Existem extensões disponíveis para outras soluções da Adobe, como [!DNL Adobe Analytics], [!DNL Adobe Target] e [!DNL Adobe Audience Manager].
 *  extensão do Mobile Core e todas as extensões adicionais podem ser baixadas e instaladas por meio dos gerentes de dependência, como Maven e CocoaPods.
 * Ao adicionar uma extensão, você deve recompilar o aplicativo e concluir o processo de envio/aprovação da loja de aplicativos.
 
@@ -88,7 +89,7 @@ Para obter mais informações sobre a introdução às propriedades móveis, con
 
 ### Recursos
 
-Quando você salva uma biblioteca, todos os recursos nela agora são verificados e as tags solicitam que você adicione as extensões necessárias que estiverem ausentes.
+Quando você salva uma biblioteca, agora todos os recursos nela são verificados, e as tags solicitam que você adicione as extensões necessárias que estiverem ausentes.
 
 ### Atualizações
 
@@ -103,7 +104,7 @@ Ocorreram alguns casos de borda em que o construtor de regras não exibia os com
 
 ### Recursos
 
-As propriedades de tags recém-criadas agora vêm com um host [!DNL "Managed by Adobe"] e três ambientes (um de cada tipo) por padrão.
+As propriedades de tag recém-criadas agora vêm com um host [!DNL "Managed by Adobe"] e três ambientes (um de cada tipo) por padrão.
 
 ## 14 de agosto de 2018
 
@@ -122,7 +123,7 @@ Agora o catálogo de extensões é classificado por nome de exibição em vez do
 
 #### Atualização da extensão
 
-Os usuários do Adobe Experience Platform agora são notificados quando novas versões das extensões estão disponíveis e podem instalá-las sozinhos. Leia mais [aqui](../ui/managing-resources/extensions/extension-upgrade.md).
+Agora os usuários da Adobe Experience Platform são notificados quando novas versões das extensões estão disponíveis e eles mesmos podem instalá-las. Leia mais [aqui](../ui/managing-resources/extensions/extension-upgrade.md).
 
 ### Atualizações
 
@@ -132,7 +133,7 @@ Os códigos de inserção foram movidos da página de detalhes do Ambiente para 
 
 ### Correções de erros
 
-* Em alguns cenários, as regras salvas por meio da interface do usuário não eram salvas na ordem correta.  Isso já foi corrigido. Em uma atualização futura, uma migração de dados corrigirá todas as regras afetadas, mas enquanto isso, editar a regra, fazer uma alteração e salvar manualmente corrigirá uma regra afetada.
+* Em alguns cenários, as regras salvas por meio da interface não eram salvas na ordem correta.  Isso já foi corrigido. Em uma atualização futura, uma migração de dados corrigirá todas as regras afetadas, mas enquanto isso, editar a regra, fazer uma alteração e salvar manualmente corrigirá uma regra afetada.
 
 ## 10 de julho de 2018
 
@@ -145,9 +146,9 @@ Os códigos de inserção foram movidos da página de detalhes do Ambiente para 
 
 ### Recursos
 
-#### Agora as bibliotecas de Tags e DTM estão ativas na China
+#### Agora as bibliotecas de tags e do DTM estão ativas na China
 
-As tags e as bibliotecas [!DNL DTM] usando [!DNL Akamai] agora estão disponíveis nos nós de borda CDN na China. Isso oferece velocidades de carregamento de biblioteca muito mais rápidas para usuários finais na China.
+As bibliotecas de tags e do [!DNL DTM] que usam o [!DNL Akamai] agora estão disponíveis em nós de borda CDN na China. Isso proporciona velocidades de carregamento de biblioteca muito mais rápidas para os usuários finais na China.
 
 #### Mensagens de erro aprimoradas
 
@@ -177,7 +178,7 @@ Agora as páginas do ambiente exibem os códigos de inserção assíncronos como
 
 ### Documentação
 
-A documentação de código aberto para tags está disponível em [Experience League](../home.md).
+A documentação de código aberto para tags está disponível na [Experience League](../home.md).
 
 ## 24 de abril de 2018
 
@@ -205,7 +206,7 @@ Mensagens de aviso aprimoradas.
 
 #### Aprimoramento da ID da regra
 
-A ID da regra agora é emitida para cada regra em uma criação e pode ser referenciada no navegador.
+Agora a ID da regra é emitida para cada regra em um build e é possível fazer referência a ela no navegador.
 
 #### Ordem de evento do carregamento de página
 
@@ -228,7 +229,7 @@ Pequenas melhorias de estilo.
 * A biblioteca ativa foi movida para o canto superior direito para criar mais espaço para o conteúdo
 * Botões de ação movidos para o canto superior direito
 * Agora a Edição em massa lista as ações mais inteligentes, recolhidas em um menu Mais nas telas menores
-* Os campos de formulário agora têm foco padrão
+* Agora os campos de formulário têm um foco padrão
 
 ## 20 de março de 2018
 
@@ -250,9 +251,9 @@ Os detalhes do evento são copiados para o objeto de evento de nível superior (
 
 É possível excluir elementos de dados, regras e extensões. Consulte [Excluir recursos](../ui/managing-resources/delete-resources.md).
 
-#### Vincular código de inserção do DTM às tags
+#### Vincular código de inserção de DTM a tags
 
-Ao vincular o [!DNL DTM] código incorporado às tags, é possível manter o [!DNL DTM] código de inserção de produção em uma página, mas enviar os arquivos de tag lá, em vez de [!DNL DTM].
+Ao vincular o código de inserção do [!DNL DTM] a tags, você pode manter o código integrado de produção [!DNL DTM] em uma página, mas fornecer arquivos de tag nela em vez de [!DNL DTM].
 
 ## 6 de março de 2018
 
@@ -276,7 +277,7 @@ Correção de um problema que fazia com que uma consulta de banco de dados demor
 #### Aprimoramentos na biblioteca ativa
 
 * As ações ativar/desativar perguntam se você deseja adicionar à Biblioteca ativa.
-* Crie uma nova biblioteca na lista suspensa Biblioteca ativa
+* Criar uma nova biblioteca por meio da lista suspensa Biblioteca principal
 
 ## 1 de fevereiro de 2018
 
@@ -284,13 +285,13 @@ Correção de um problema que fazia com que uma consulta de banco de dados demor
 
 #### Cabeçalhos de controle de cache do Akamai
 
-Agora os cabeçalhos de controle de cache são definidos automaticamente para bibliotecas hospedadas em [!DNL Akamai] (assets.adobedtm.com). Anteriormente, não definíamos cabeçalhos de controle de cache para nenhum arquivo hospedado em assets.adobedtm.com.
+Agora os cabeçalhos de controle de cache são definidos automaticamente para bibliotecas hospedadas em [!DNL Akamai] (assets.adobedtm.com). Anteriormente, não definíamos cabeçalhos de controle de cache para os arquivos hospedados em assets.adobedtm.com.
 
-* Criações de produção: Os cabeçalhos de controle de cache são definidos como 60 minutos
-* Criações de armazenamento temporário com &quot;-staging&quot; no nome do arquivo: Os cabeçalhos de controle de cache são definidos como 0 minutos
-* Criações de Desenvolvimento com &quot;-development&quot; no nome do arquivo: Os cabeçalhos de controle de cache são definidos como 0 minutos
-* Tags Criações de armazenamento temporário sem &quot;-staging&quot; no nome do arquivo: O padrão de 60 minutos é herdado
-* Desenvolvimento de tags sem &quot;-development&quot; no nome do arquivo: O padrão de 60 minutos é herdado
+* Builds de produção: os cabeçalhos de controle de cache estão definidos como 60 minutos
+* Builds temporárias com “-staging” no nome do arquivo: os cabeçalhos de controle de cache são definidos como 0 minutos
+* Builds de desenvolvimento com “-development” no nome do arquivo: os cabeçalhos de controle de cache são definidos como 0 minutos
+* Buils temporárias de tags sem “-staging” no nome do arquivo: o padrão de 60 minutos é herdado.
+* Builds de desenvolvimento de tags sem “-development” no nome do arquivo: o padrão de 60 minutos é herdado.
 
 >[!NOTE]
 >
@@ -298,7 +299,7 @@ Agora os cabeçalhos de controle de cache são definidos automaticamente para bi
 
 >[!IMPORTANT]
 >
->Os desenvolvedores de tags que não têm `-development` ou `-staging` nos códigos de inserção do Ambiente precisam recriar os ambientes de Desenvolvimento e Armazenamento temporário para obter o cabeçalho de controle de cache 0. Se não recriar os ambientes, você terá o mesmo controle de cache de 60 minutos das bibliotecas de produção.
+>Os desenvolvedores de tags que não têm `-development` ou `-staging` em seus códigos integrados de ambiente precisam recriar os ambientes de desenvolvimento e preparo para obter o cabeçalho de controle de cache 0. Se não recriar os ambientes, você terá o mesmo controle de cache de 60 minutos das bibliotecas de produção.
 
 ## 18 de janeiro de 2018
 
@@ -314,7 +315,7 @@ Defina uma biblioteca nova ou existente como a biblioteca ativa. Ao criar/editar
 
 #### Vários argumentos no logger
 
-Agora é possível passar objetos reais para a função de log e exibi-los como objetos no console do navegador ao usar o `_satellite.debug()`. Isso faz com que o logger da tag se comporte muito mais como o console.log. Para ativar essa alteração, não há mais um histórico persistente anexado à função do `_satellite.debug()`; portanto, ao chamá-lo pela primeira vez, você não verá mais um histórico de eventos anteriores. Você verá as mensagens de depuração a partir desse ponto.
+Agora é possível passar objetos reais para a função de log e exibi-los como objetos no console do navegador ao usar o `_satellite.debug()`. Isso faz com que o registrador de tags se comporte muito mais como console.log. Para ativar essa alteração, não há mais um histórico persistente anexado à função do `_satellite.debug()`; portanto, ao chamá-lo pela primeira vez, você não verá mais um histórico de eventos anteriores. Você verá as mensagens de depuração a partir desse ponto.
 
 ## 10 de janeiro de 2018
 
@@ -324,7 +325,7 @@ Agora é possível passar objetos reais para a função de log e exibi-los como 
 
 * Na página
 
-   A biblioteca de tags agora inclui suporte para execução assíncrona. Há ramificações importantes para como isso muda o que acontece na biblioteca. Você deve ler a [documentação assíncrona](../ui/client-side/asynchronous-deployment.md) antes de qualquer ação.
+   Agora a biblioteca de tags inclui suporte para execução assíncrona. Há ramificações importantes para como isso muda o que acontece na biblioteca. Você deve ler a [documentação assíncrona](../ui/client-side/asynchronous-deployment.md) antes de qualquer ação.
 
 * Alternância assíncrona em ambientes
 
@@ -344,7 +345,7 @@ As alterações a seguir foram realizadas para descrever melhor o comportamento 
 
 ### Correções de erros e aprimoramentos
 
-* Correção de um problema em que a biblioteca de tags era carregada duas vezes em determinados casos de borda.
+* Correção de um problema em que a biblioteca de tags carregava duas vezes em determinados casos de borda.
 * Agora existem entradas de log de auditoria para Excluir propriedade.
 * Melhoria na velocidade de carregamento do Seletor de revisão ao mudar rapidamente de uma entrada para outra.
 * Agora os links de ajuda abrem em uma nova guia.
@@ -353,13 +354,13 @@ As alterações a seguir foram realizadas para descrever melhor o comportamento 
 
 Data de lançamento: **8 de novembro de 2017**
 
-Esta é a primeira versão das tags no Adobe Experience Platform.
+Esta é a primeira versão de tags na Adobe Experience Platform.
 
-Tags é a próxima geração de recursos de gerenciamento de tags produzidos pelo Adobe. Ele oferece aos clientes uma forma simples de implantar e gerenciar todas as tags de análise, marketing e anúncios necessárias para potencializar experiências de cliente relevantes.
+Tags é a próxima geração de recursos de gerenciamento de tags produzidos pela Adobe. Ele oferece aos clientes uma forma simples de implantar e gerenciar todas as tags de análise, de marketing e de anúncios necessárias para proporcionar experiências relevantes aos clientes.
 
-As tags capacitam qualquer pessoa a criar e manter suas próprias integrações usando extensões. Essas extensões estão disponíveis aos clientes da plataforma em uma experiência de loja de aplicativos, para que possam instalar, configurar e implantar tags com rapidez.
+As tags capacitam qualquer pessoa a criar e manter suas próprias integrações usando extensões. Essas extensões estão disponíveis para os clientes da Paltform em uma experiência de loja de aplicativos, para que possam instalar, configurar e implantar tags com rapidez.
 
-As tags são fornecidas aos clientes da Adobe Experience Cloud como um recurso incluso com valor agregado. As tags são um produto totalmente novo com uma nova base de código, criada para substituir o serviço [!DNL Dynamic Tag Management (DTM)] anterior. No entanto, o [!DNL DTM] continuará sendo compatível no futuro próximo. O [!DNL Adobe] continuará a corrigir erros significativos e a assegurar um desempenho coerente. No momento, não há grandes melhorias de recursos planejadas para o antigo [!DNL DTM].
+As tags são fornecidas aos clientes da Adobe Experience Cloud como um recurso incluso de valor agregado. Tags é um produto totalmente novo com uma nova base de código, projetado para substituir o serviço [!DNL Dynamic Tag Management (DTM)] anterior. No entanto, o [!DNL DTM] continuará sendo compatível no futuro próximo. O [!DNL Adobe] continuará a corrigir erros significativos e a assegurar um desempenho coerente. No momento, não há grandes melhorias de recursos planejadas para o antigo [!DNL DTM].
 
 ### Principais benefícios
 
@@ -371,7 +372,7 @@ As tags são fornecidas aos clientes da Adobe Experience Cloud como um recurso i
 
 #### Extensões
 
-Uma extensão é um pacote de código (JavaScript, HTML e CSS) que estende a funcionalidade do cliente e da interface do usuário da coleta de dados. &#x200B;Crie, gerencie e atualize suas integrações usando uma interface de autoatendimento virtual. Pense em uma tag como um sistema operacional e nas extensões como os aplicativos usados para realizar as tarefas.
+Uma extensão é um pacote de código (JavaScript, HTML e CSS) que estende as funcionalidades de tags. &#x200B;Crie, gerencie e atualize suas integrações usando uma interface de autoatendimento virtual. Pense em uma tag como um sistema operacional e nas extensões como os aplicativos usados para realizar as tarefas.
 
 #### Catálogo de extensões
 
@@ -408,18 +409,18 @@ O processo de publicação permite que as equipes publiquem o código nas págin
 
 Automatize implementações ou um grupo de tecnologias.
 
-* As tags interagem com as APIs [!DNL Reactor] &#x200B;
+* O Tags interage com as APIs do [!DNL Reactor]
 * É possível automatizar as implantações por meio de APIs
-* Integre as APIs de tags a seus próprios sistemas internos &#x200B;
-* Você pode criar sua própria interface do usuário, se desejar &#x200B;
+* Integre as APIs de tags a seus próprios sistemas internos
+* Se quiser, você poderá criar sua própria interface do usuário
 
 #### Tag contêiner modular e leve
 
-A tag container criada pelas tags é 60% mais leve do que [!DNL Adobe Tag Manager] e 40% mais leve do que [!DNL Google Tag Manager]. O conteúdo do container é minimizado, incluindo o código personalizado. Tudo é modular. Se você não precisar de um item, ele não será incluído na biblioteca. O resultado é uma implementação rápida e compacta.
+A tag container criada por tags é 60% mais leve que o [!DNL Adobe Tag Manager] e 40% mais leve que o [!DNL Google Tag Manager]. O conteúdo do container é minimizado, incluindo o código personalizado. Tudo é modular. Se você não precisar de um item, ele não será incluído na biblioteca. O resultado é uma implementação rápida e compacta.
 
 ## Outros destaques
 
-As tags fornecem várias melhorias em relação a sistemas semelhantes. Isso inclui:
+As tags fornecem várias melhorias em relação a sistemas semelhantes. As melhorias incluem:
 
 * Nenhum uso do `document.write ()`, pois o não permite seu uso &#x200B;[!DNL Chrome]
 * As regras de Topo e de Base da página são empacotadas na biblioteca principal para minimizar chamadas HTTP desnecessárias
