Updated by task 'AutomatedMDTask_1663806772406_TM-MT_1663806875396'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/ad42773165e959f2055efe682f6a586d1d716a8a

--- a/help/tags/release-notes/2018.md
+++ b/help/tags/release-notes/2018.md
@@ -2,10 +2,10 @@
 title: Notas de versão de 2018
 description: Notas de versão de 2018 de tags na Adobe Experience Platform.
 exl-id: fcbfa3f9-51a4-4852-894e-29343df3eabe
-source-git-commit: 77313baabee10e21845fa79763c7ade4e479e080
+source-git-commit: 0c2ee3bbb4d85bd755b4847a509fc7bd50ba67bc
 workflow-type: tm+mt
-source-wordcount: '2635'
-ht-degree: 96%
+source-wordcount: '2644'
+ht-degree: 100%
 
 ---
 
@@ -39,7 +39,7 @@ Agora é possível fazer uma cópia de uma regra na mesma propriedade. Antes que
 
 #### Extensão principal:
 
-* **Opção Persistir coorte** A opção para persistir uma coorte foi adicionada à condição Amostragem. Essa opção tem o efeito de manter um usuário dentro ou fora da coorte de amostra nas sessões. Por exemplo, se a caixa de seleção &quot;persist cohort&quot; estiver marcada e a condição retornar &quot;true&quot; na primeira vez em que for executada para um determinado visitante, ela retornará &quot;true&quot; em todas as execuções subsequentes da condição para o mesmo visitante. Da mesma forma, se a caixa de seleção &quot;persist cohort&quot; estiver marcada e a condição retornar false na primeira vez em que for executada para um determinado visitante, ela retornará false em todas as execuções subsequentes da condição para o mesmo visitante.
+* **Opção Persistir coorte** A opção para persistir uma coorte foi adicionada à condição Amostragem. Essa opção tem o efeito de manter um usuário dentro ou fora da coorte de amostra nas sessões. Por exemplo, se a caixa de seleção “persist cohort” estiver marcada e a condição retornar &quot;true&quot; na primeira vez em que for executada para um determinado visitante, ela retornará &quot;true&quot; em todas as execuções subsequentes da condição para o mesmo visitante. Da mesma forma, se a caixa de seleção “persist cohort” estiver marcada e a condição retornar &quot;false&quot; na primeira vez em que for executada para um determinado visitante, ela retornará &quot;false&quot; em todas as execuções subsequentes da condição para o mesmo visitante.
 * **Correção de erros** Correção de um problema em que uma regra que usava um evento de parte inferior da página e uma ação de código personalizado em uma página em que as tags eram carregadas de forma síncrona, mas instaladas incorretamente (sem chamada para `_satellite.pageBottom()`) limpava o conteúdo do site.
 * **Correção de erros** Correção de um problema em que eventos de Enters Viewport não funcionavam se a biblioteca de tags fosse carregada de forma assíncrona e terminasse o carregamento após o evento DOMContentLoaded do navegador ser disparado.
 
@@ -72,7 +72,7 @@ Agora as tags são compatíveis com dispositivos móveis.
 
 Usado por milhares de clientes para o gerenciamento de tags na Web, agora o espaço de trabalho de tags pode ser usado para gerenciar SDKs móveis.
 
-A criação de uma propriedade de tag móvel permite:
+A criação de uma propriedade móvel na interface da Coleção de dados permite:
 
 * Criar elementos de dados e regras sofisticadas que podem combinar ações em várias soluções.
 * Gerenciar extensões móveis:
@@ -372,7 +372,7 @@ As tags são fornecidas aos clientes da Adobe Experience Cloud como um recurso i
 
 #### Extensões
 
-Uma extensão é um pacote de código (JavaScript, HTML e CSS) que estende as funcionalidades de tags. &#x200B;Crie, gerencie e atualize suas integrações usando uma interface de autoatendimento virtual. Pense em uma tag como um sistema operacional e nas extensões como os aplicativos usados para realizar as tarefas.
+Uma extensão é um pacote de código (JavaScript, HTML e CSS) que estende a funcionalidade do cliente e da Interface de coleção de dados:Crie, gerencie e atualize suas integrações usando uma interface de autoatendimento virtual. Pense em uma tag como um sistema operacional e nas extensões como os aplicativos usados para realizar as tarefas.
 
 #### Catálogo de extensões
 
