Updated by task 'AutomatedMDTask_1664555733346_TM-MT_1664555866806'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/c1f7a4806037667235cc81407d512ac777c9cdef

--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,7 +2,7 @@
 title: Notas de versão da Adobe Experience Platform de maio de 2022
 description: As notas de versão de maio de 2022 para o Adobe Experience Platform.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: 49ba5263c6dc8eccac2ffe339476cf316c68e486
+source-git-commit: e6effd2109ef8e01e8d8726a7ebab196e7a0cb79
 workflow-type: tm+mt
 source-wordcount: '2397'
 ht-degree: 5%
@@ -64,7 +64,7 @@ O Experience Platform fornece um conjunto de recursos de higiene de dados que pe
 
 {style=&quot;table-layout:auto&quot;}
 
-Para obter mais informações sobre logs de auditoria na Platform, consulte [visão geral da higiene de dados](../../hygiene/home.md).
+Para obter mais informações sobre os recursos de higiene de dados da Platform, consulte [visão geral da higiene de dados](../../hygiene/home.md).
 
 ## Alertas {#alerts}
 
