Updated by task 'AutomatedMDTask_1666972188298_TM-MT_1666972298648'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/7858d51e0001f4acc67e119ce3c74b53afe880b5

--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,7 +2,7 @@
 title: Notas de versão da Adobe Experience Platform de maio de 2022
 description: As notas de versão de maio de 2022 para o Adobe Experience Platform.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: 14e3eff3ea2469023823a35ee1112568f5b5f4f7
+source-git-commit: f29326126fbef2ac16af9f7acd56efac1dda321b
 workflow-type: tm+mt
 source-wordcount: '2397'
 ht-degree: 7%
@@ -60,7 +60,7 @@ O Experience Platform fornece um conjunto de recursos de higiene de dados que pe
 
 | Recurso | Descrição |
 | --- | --- |
-| Expirações do conjunto de dados | [Programar TTLs](../../hygiene/ui/dataset-expiration.md) para conjuntos de dados da plataforma. |
+| Expirações do conjunto de dados | [Agendar expirações](../../hygiene/ui/dataset-expiration.md) para conjuntos de dados da plataforma. |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -96,7 +96,7 @@ Para obter mais informações sobre logs de auditoria na Platform, consulte [vis
 
 ## Painéis {#dashboards}
 
-O Adobe Experience Platform fornece vários painéis através dos quais você pode visualizar informações importantes sobre os dados de sua organização, conforme capturados durante os instantâneos diários.
+O Adobe Experience Platform fornece vários painéis através dos quais você pode visualizar informações importantes sobre os dados de sua organização, como capturados durante os instantâneos diários.
 
 ### Painéis de perfis
 
